# Projects

FloatFraction/: CMakeCache.txt  CMakeLists.txt  FloatFract1  FloatFract1.cpp  Fract.h  Fraction.cpp  FractionUnits1  FractionUnits1.cpp  Makefile  Printme  Printme.cpp  cmake_install.cmake
Project1/: Project1.cbp  Project1.depend  main.cpp
Project2/: CMakeLists.txt  Project2.kdev4  project2.categories
Project2/.kdev4/: Project2.kdev4
Project2/src/: CMakeLists.txt  project2.cpp  project2.h  project2.json
Project3/: CMakeLists.txt  Project3.kdev4  main  main.cpp
Project3/.kdev4/: Project3.kdev4
Project4/: Fraction  Fraction.cpp  String  String.cpp  StringParser  StringParser.cpp  bin.txt  example_11.1.1  example_11.1.1.cpp  example_11.2.2  example_11.2.2.cpp  example_14.1.1  example_14.1.1.cpp  example_2.3.1  example_2.3.1.cpp  example_6.1.1  example_6.1.1.cpp  example_6.1.2  example_6.1.2.cpp  example_6.2.1  example_6.2.1.cpp  example_6.3.1  example_6.3.1.cpp  example_6.3.2  example_6.3.2.cpp  example_7.1.1  example_7.1.1.cpp  example_7.2.1  example_7.2.1.cpp  example_7.3.1  example_7.3.1.cpp  example_7.4.1  example_7.4.1.cpp  example_7.4.2  example_7.4.2.cpp  example_7.5.1  example_7.5.1.cpp  example_7.5.2  example_7.5.2.cpp  example_8.1.1  (+28 more)
